--- a/KütüphaneUygulaması/Views/Ogrenci/OgrenciEkleme.cshtml
+++ b/KütüphaneUygulaması/Views/Ogrenci/OgrenciEkleme.cshtml
@@ -48,8 +48,8 @@
                             {
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        @Html.TextBoxFor(m => m.İsim, new { @class = "form-control form-control-user", @id = "exampleFirstName", placeholder = "İsim" })
-                                        @Html.ValidationMessageFor(m => m.İsim, "", new { @style = "color:red" })
+                                        @Html.TextBoxFor(m => m.Isim, new { @class = "form-control form-control-user", @id = "exampleFirstName", placeholder = "İsim" })
+                                        @Html.ValidationMessageFor(m => m.Isim, "", new { @style = "color:red" })
                                     </div>
                                     <div class="col-sm-6">
                                         @Html.TextBoxFor(m => m.Soyisim, new { @class = "form-control form-control-user", @id = "exampleLastName", placeholder = "Soyisim" })
