--- a/KütüphaneUygulaması/Views/Ogrenci/ProfilEdit.cshtml
+++ b/KütüphaneUygulaması/Views/Ogrenci/ProfilEdit.cshtml
@@ -21,7 +21,7 @@
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
                                     <label>İsim</label>
-                                    @Html.TextBoxFor(m => m.İsim, new { @class = "form-control rounded-left rounded-right", @maxlength = "15", @required = "required", @readonly = "readonly" })
+                                    @Html.TextBoxFor(m => m.Isim, new { @class = "form-control rounded-left rounded-right", @maxlength = "15", @required = "required", @readonly = "readonly" })
                                 </div>
                                 <div class="col-sm-6">
                                     <label>Soyisim</label>
