--- a/KütüphaneUygulaması/Views/KitapAl/KitapAlma.cshtml
+++ b/KütüphaneUygulaması/Views/KitapAl/KitapAlma.cshtml
@@ -1,7 +1,5 @@
-﻿@model KütüphaneUygulaması.ViewModel.ÖdüncAlViewModel
-
+﻿@model KütüphaneUygulaması.ViewModel.OduncAlViewModel
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-
     <div class="container">
         <div class="card o-hidden border-0 shadow-lg my-5">
             <div class="card-body p-0">
