--- a/KütüphaneUygulaması/Views/KitapAl/Kitaplarım.cshtml
+++ b/KütüphaneUygulaması/Views/KitapAl/Kitaplarım.cshtml
@@ -38,7 +38,7 @@
                                         <td>@kitap.KitapAdı</td>
                                         <td>@kitap.KitapSayfası</td>
                                         <td>@kitap.KitapTürü</td>
-                                        <td>@ödünc.OdüncTarihi</td>
+                                        <td>@ödünc.OduncTarihi</td>
                                         <td>@ödünc.TeslimTarihi</td>
                                         <td>
                                             <a data-toggle="modal" data-target="#Assign" style="color:white;" onclick="deleteCompany(@ödünc.id)" class="btn btn-primary">
