--- a/KütüphaneUygulaması/Views/KitapAl/RezervasyonEttigimKitaplar.cshtml
+++ b/KütüphaneUygulaması/Views/KitapAl/RezervasyonEttigimKitaplar.cshtml
@@ -25,9 +25,9 @@
                         @foreach (var kitap in Model.RezervasyonKitapListesi)
                         {
                             <tr>
-                                <td>@kitap.KitapAdı</td>
-                                <td>@kitap.KitapSayfası</td>
-                                <td>@kitap.KitapBasımTarihi</td>
+                                <td>@kitap.KitapAdi</td>
+                                <td>@kitap.KitapSayfasi</td>
+                                <td>@kitap.KitapBasimTarihi</td>
                                 <td>@kitap.Adi</td>
                                 <td>@kitap.Tarih</td>
                                 <td>
