--- a/KütüphaneUygulaması/Views/Ogrenci/OgrenciEkleme.cshtml
+++ b/KütüphaneUygulaması/Views/Ogrenci/OgrenciEkleme.cshtml
@@ -82,8 +82,8 @@
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        @Html.TextBoxFor(m => m.Sınıfı, new { @class = "form-control form-control-user", placeholder = "Sınıf", type = "number" , @min = "0", @max = "4" })
-                                        @Html.ValidationMessageFor(m => m.Sınıfı, "", new { @style = "color:red" })
+                                        @Html.TextBoxFor(m => m.Sinifi, new { @class = "form-control form-control-user", placeholder = "Sınıf", type = "number" , @min = "0", @max = "4" })
+                                        @Html.ValidationMessageFor(m => m.Sinifi, "", new { @style = "color:red" })
                                     </div>
                                     <div class="col-sm-6">
                                         @Html.TextBoxFor(m => m.Adres, new { @class = "form-control form-control-user", placeholder = "Adres" })
