--- a/KütüphaneUygulaması/Views/Ogrenci/ProfilEdit.cshtml
+++ b/KütüphaneUygulaması/Views/Ogrenci/ProfilEdit.cshtml
@@ -50,8 +50,8 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <label>Sınıfı</label>
-                                    @Html.TextBoxFor(m => m.Sınıfı, new { @class = "form-control form-control-user", placeholder = "Sınıf",@required="required", type = "number", @min = "0", @max = "4" })
+                                    <label>Sinifi</label>
+                                    @Html.TextBoxFor(m => m.Sinifi, new { @class = "form-control form-control-user", placeholder = "Sınıf",@required="required", type = "number", @min = "0", @max = "4" })
                                 </div>
                                 <div class="col-sm-6">
                                     <label>Adres</label>
