--- a/KütüphaneUygulaması/Views/Shared/Components/TeslimTarihiYaklasan/Default.cshtml
+++ b/KütüphaneUygulaması/Views/Shared/Components/TeslimTarihiYaklasan/Default.cshtml
@@ -37,7 +37,7 @@
                     <div class="status-indicator bg-success"></div>
                 </div>
                 <div class="font-weight-bold">
-                    <div class="text-truncate" style="font-size:12px;">@teslim.KitapAdı Kitabın Teslim Tarihi Yaklaşıyor</div>
+                    <div class="text-truncate" style="font-size:12px;">@teslim.KitapAdi Kitabın Teslim Tarihi Yaklaşıyor</div>
                     <div class="small text-gray-500" style="font-size:11px;"><b>Teslim Tarihi: </b>@teslim.TeslimTarihi</div>
                 </div>
             </a>
