--- a/KütüphaneUygulaması/Views/Shared/_Layout.cshtml
+++ b/KütüphaneUygulaması/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Kitaplar</h6>
-                        <a class="collapse-item" href="/KitapAl/Kitaplarım">Aldığım Kitaplar</a>
+                        <a class="collapse-item" href="/KitapAl/Kitaplarim">Aldığım Kitaplar</a>
                         <a class="collapse-item" href="/KitapAl/RezervasyonEttigimKitaplar">Ayırt Ettiğim Kitaplar</a>
                     </div>                    
                 </div>
@@ -51,10 +51,6 @@
             <!-- Divider -->
             <hr class="sidebar-divider">
             <!-- Heading -->
-            <div class="sidebar-heading">
-                Addons
-            </div>
-            <hr class="sidebar-divider d-none d-md-block">
 
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
